--- a/src/component/formulario/formulario.css
+++ b/src/component/formulario/formulario.css
@@ -5,8 +5,19 @@
 }
 
 .formulario form{
-    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #c2c2c2;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 16px;
     width: 500px;
     height: 500px;
+}
+
+.formulario h3{
+    color: #f2f2f2;
+    font-family: "Lexend Exa", sans-serif;
+    margin: .5rem;
 }
