--- a/src/component/listaSuspensa/listaSuspensa.css
+++ b/src/component/listaSuspensa/listaSuspensa.css
@@ -1,15 +1,19 @@
 .lista-suspensa label{
     background: none;
     display: block;
-    margin-bottom: 8px;
-    font-size: 24px;
+    margin-bottom: 5px;
+    font-size: 18px;
+    color: #f2f2f2;
+    font-family: "Lexend Exa", sans-serif;
 }
 
 .lista-suspensa select{
     background-color: #fff;
+    border-radius: 16px;
+    border: none;
+    height: 25px;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
-    width: 80%;
-    font-size: 24px;
-    padding: 24px;
+    font-size: 18px;
     box-sizing: border-box;
+    width: 300px;
 }
